whack-a-pod/admin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin
  namespace: wap-admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin
  template:
    metadata:
      labels:
        app: admin
    spec:
      serviceAccountName: wap-admin
      containers:
      - name: admin
        image: gcr.io/google-samples/whack-a-pod/api:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: admin
  namespace: wap-admin
spec:
  selector:
    app: admin
  ports:
  - port: 8080
    targetPort: 8080
